--- a/package.json
+++ b/package.json
@@ -32,14 +32,21 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
+    "@types/faker": "^5.5.9",
+    "@types/jest": "^27.4.0",
     "@types/jsonwebtoken": "^8.5.6",
+    "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.8.1",
     "@typescript-eslint/parser": "^5.8.1",
     "axios": "^0.24.0",
     "dotenv": "^10.0.0",
     "eslint": "^8.5.0",
     "eslint-plugin-import": "^2.25.3",
+    "faker": "^5.5.3",
+    "jest": "^27.4.5",
     "jsonwebtoken": "^8.5.1",
+    "supertest": "^6.1.6",
+    "ts-jest": "^27.1.2",
     "ts-node": "^10.4.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.4"
